--- a/Client/src/app/net-banking/home-page/home-page.component.html
+++ b/Client/src/app/net-banking/home-page/home-page.component.html
@@ -1,2 +1,16 @@
-<h1>Header</h1>
-<router-outlet></router-outlet>
+<br>
+
+ <h4>Login Internet Banking</h4>
+
+    <div>
+        <button routerLink="/Login" class="btn btn-group">
+            Login
+        </button><br>
+        <button routerLink="/Register" class="btn btn-group">
+          Register
+        </button><br>
+        <button routerLink="/CreateAccount" class="btn btn-group">
+            Create Account
+        </button><br>
+    </div>
+
