--- a/Client/src/app/net-banking/login/login.component.html
+++ b/Client/src/app/net-banking/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<br>
+<div>
+    <h4>Login to your Account</h4>
+    <form>
+        <label for="userId">User ID </label> &nbsp;
+        <input name="userId" type="text" /><br><br>
+        <label for="Password">Password </label>&nbsp;
+        <input name="Password" type="password" /><br><br>
+        <button type="submit" >Login</button>
+    </form>
+</div>
