User Module created

--- a/Client/src/app/net-banking/admin/admin.component.html
+++ b/Client/src/app/net-banking/admin/admin.component.html
@@ -1,1 +1,11 @@
-<p>admin works!</p>
+<br>
+<div>
+    <h4>Login to your Admin Account</h4><br>
+    <form>
+        <label for="userId">User ID </label> &nbsp;
+        <input name="userId" type="text" /><br><br>
+        <label for="Password">Password </label>&nbsp;
+        <input name="Password" type="password" /><br><br>
+        <button type="submit" >Login</button><br><br>
+    </form>
+</div>
