--- a/Client/src/app/net-banking/registration/registration.component.html
+++ b/Client/src/app/net-banking/registration/registration.component.html
@@ -1,1 +1,20 @@
-<p>registration works!</p>
+<br>
+<div>
+    <h4>Login to your Account</h4>
+    <form>
+        <label for="AccountNumber">Account Number</label> &nbsp;
+        <input name="AccountNumber" type="text" /><br><br>
+        <label for="SetLoginPassword">Set Login Password </label>&nbsp;
+        <input name="SetLoginPassword" type="password" /><br><br>
+        <label for="ConfirmLoginPassword">Confirm Login Password </label> &nbsp;
+        <input name="ConfirmLoginPassword" type="password" /><br><br>
+        <label for="SetTransactionPassword">Set Transaction Password </label>&nbsp;
+        <input name="SetTransactionPassword" type="password" /><br><br>
+        <label for="ConfirmTransactionPassword">Confirm Transaction Password</label> &nbsp;
+        <input name="ConfirmTransactionPassword" type="password" /><br><br>
+        <label for="otp">Enter OTP</label>&nbsp;
+        <input name="otp" type="text" /><br><br>
+
+        <button type="submit" >Submit</button>
+    </form>
+</div>
