--- a/Client/src/app/net-banking/login/login.component.html
+++ b/Client/src/app/net-banking/login/login.component.html
@@ -1,11 +1,16 @@
 <br>
 <div>
-    <h4>Login to your Account</h4>
+    <h4>Login to your Account</h4><br>
     <form>
         <label for="userId">User ID </label> &nbsp;
         <input name="userId" type="text" /><br><br>
         <label for="Password">Password </label>&nbsp;
         <input name="Password" type="password" /><br><br>
-        <button type="submit" >Login</button>
+        <button type="submit" >Login</button><br><br>
     </form>
+</div>
+<div>
+    <h5>First Time User ? Register</h5><br>
+    <h5>Forget User ID</h5><br>
+    <h5>Forget Password</h5><br>
 </div>
