--- a/Client/src/app/net-banking/user-page/user-page.component.html
+++ b/Client/src/app/net-banking/user-page/user-page.component.html
@@ -1,1 +1,17 @@
-<p>user-page works!</p>
+<div>
+    <h3>Account Details</h3>
+    <h3>Account Summary</h3>
+    <h3>Fund Transfer</h3>
+    <h3>Account Statement</h3>
+</div><br><br>
+<div>
+    <button  class="btn btn-group">
+        Account Statement
+    </button><br>
+    <button  class="btn btn-group">
+      Register
+    </button><br>
+    <button  class="btn btn-group">
+        Create Account
+    </button><br>
+</div>
