Scaffold New DB

--- a/Client/src/app/net-banking/create-account/create-account.component.html
+++ b/Client/src/app/net-banking/create-account/create-account.component.html
@@ -1,7 +1,7 @@
 <br>
 <div>
     <h4>Login to your Account</h4>
-    <form [formGroup]="login" (ngSubmit)="submitData(login)">
+    <form >
         <label for="Title"><Title></Title></label> &nbsp;
         <input name="Title" type="text" /><br><br>
         <div [hidden]="login.controls['Title'].valid || login.controls['Title'].pristine">
