Client error fixed

--- a/Client/src/app/net-banking/home-page/home-page.component.html
+++ b/Client/src/app/net-banking/home-page/home-page.component.html
@@ -3,10 +3,10 @@
  <h4>Login Internet Banking</h4>
 
     <div>
-        <button routerLink="/Login" class="btn btn-group">
+        <button routerLink="/login" class="btn btn-group">
             Login
         </button><br>
-        <button routerLink="/Register" class="btn btn-group">
+        <button routerLink="/register" class="btn btn-group">
           Register
         </button><br>
         <button routerLink="/CreateAccount" class="btn btn-group">
