Routing figured out

--- a/Client/src/app/net-banking/home-page/home-page.component.html
+++ b/Client/src/app/net-banking/home-page/home-page.component.html
@@ -3,15 +3,15 @@
  <h4>Login Internet Banking</h4>
 
     <div>
-        <button routerLink="/login" class="btn btn-group">
+        <button routerLink="/login" routerLinkActive="active" class="btn btn-group">
             Login
         </button><br>
-        <button routerLink="/register" class="btn btn-group">
+        <button routerLink="/register" routerLinkActive="active" class="btn btn-group">
           Register
         </button><br>
-        <button routerLink="/CreateAccount" class="btn btn-group">
+        <button routerLink="/CreateAccount" routerLinkActive="active" class="btn btn-group">
             Create Account
         </button><br>
     </div>
 
-
+    
