--- a/Client/src/app/net-banking/login/login.component.html
+++ b/Client/src/app/net-banking/login/login.component.html
@@ -6,7 +6,7 @@
         <input name="userId" type="text" /><br><br>
         <label for="Password">Password </label>&nbsp;
         <input name="Password" type="password" /><br><br>
-        <button type="submit" >Login</button><br><br>
+        <button type="submit" (click)="login()">Login</button><br><br>
     </form>
 </div>
 <div>
