--- a/Client/src/app/net-banking/create-account/create-account.component.html
+++ b/Client/src/app/net-banking/create-account/create-account.component.html
@@ -123,7 +123,7 @@
         <input type="checkbox" name="Opt for Net Banking" value="Opt for Net Banking" ><br>
         <input type="checkbox" name="I agree" value="I agree" ><br>
 
-        <button type="submit" >Submit</button>
+        <button class="btn btn-primary" type="submit" >Submit</button>
     </form>
 </div>
 
