--- a/Client/src/app/net-banking/user-page/navbar/navbar.component.html
+++ b/Client/src/app/net-banking/user-page/navbar/navbar.component.html
@@ -6,7 +6,7 @@
      </button>
      <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
        <div class="offcanvas-header">
-         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Net Banking</h5>
          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
        </div>
        <div class="offcanvas-body">
@@ -36,7 +36,7 @@
         
        </div>
      </div>
-     <a class="navbar-brand" href="#">Offcanvas navbar</a>
+     <a class="navbar-brand" href="#">Net Banking</a>
      
    </div>
  </nav>
