--- a/Client/src/app/net-banking/user-page/navbar/navbar.component.html
+++ b/Client/src/app/net-banking/user-page/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<div>
 <nav class="navbar navbar-light bg-light fixed-top">
    <div class="container-fluid">
      
@@ -40,3 +41,5 @@
      
    </div>
  </nav>
+</div>
+ <h1>Space</h1>
